-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.5, 5.10.1
-
Windows 10 via remote desktop
When running in debug mode while connected over a remote desktop it can cause a crash whereas release mode is fine. The output is:
[8772:7876:0214/153826.016:FATAL:screen_win.cc(372)] Check failed: false.
This can be reproduced with the simplebrowser example.
- is duplicated by
-
QTBUG-68018 QWebEngineView Crash when selecting text in Html document and dragging
-
- Closed
-
-
QTBUG-67953 Drag and drop crashes QWebEngine in debug mode
-
- Closed
-
For Gerrit Dashboard: QTBUG-66560 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
221063,3 | Remove NOTREACHED in ScreenWin::GetNativeWindowFromHWND | 65-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
227988,2 | Remove NOTREACHED in ScreenWin::GetNativeWindowFromHWND | 56-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |