Remove NOTREACHED in ScreenWin::GetNativeWindowFromHWND

Since the introduction of 196ae04aa7c9b274880409fb38a050db99197900
Chromium uses its own ScreenWin implementation on Windows instead
of the previous DesktopScreenQt. This means that a different
implementation of Screen::GetDisplayNearestWindow is called, which
in turn calls ScreenWin::GetHWNDFromNativeView().

This implementation is not complete though, and in Chrome itself it is
overriden inside DesktopScreenWin::GetHWNDFromNativeView() in
chromium/ui/views/widget/desktop_aura/desktop_screen_win.cc, but
WebEngine don't use this file, and it can't be used because WebEngine
doesn't use Aura views.

The proper fix would be to implement logic similar to DesktopScreenWin
inside Qt's own DesktopScreenQt, because currently the implementation
of RenderWidgetHostViewQt::GetNativeView() always returns an empty
pointer.

As a band-aid fix to stop debug builds from crashing (because nothing
really bad seems to happen), is to comment out the assertions.

Task-number: QTBUG-66560
Change-Id: I6d3ece29cd889f5d62e2f21682f1462dde962888
Reviewed-by: Michal Klocek <michal.klocek@qt.io>